# FateCamera

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/feng/fatecamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/feng/fatecamera/constant/: CameraVersion.kt
app/src/main/java/com/feng/fatecamera/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_camera.xml
app/src/main/res/layout/: fragment_camera.xml  fragment_cameras.xml  fragment_login.xml  fragment_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/feng/fatecamera/: ExampleUnitTest.kt
camerax/: build.gradle
camerax/src/androidTest/java/androidx/camera/core/: ExampleInstrumentedTest.java
camerax/src/main/java/androidx/camera/core/: CameraControl.java  CameraFilter.java  CameraSelector.java  CameraXConfig.java  ExperimentalGetImage.java  ForwardingImageProxy.java  ImageAnalysis.java  ImageCapture.java  ImageProxy.java  ImageReaderProxyProvider.java  MetadataImageReader.java  Preview.java  ProcessingImageReader.java  VideoCapture.java  ViewPort.java
camerax/src/main/java/androidx/camera/core/impl/: CamcorderProfileProxy.java  CameraCaptureFailure.java  CameraControlInternal.java  CameraInfoInternal.java  CaptureConfig.java  Config.java  DeviceProperties.java  ImageInputConfig.java  ImageReaderProxy.java  LiveDataObservable.java  OptionsBundle.java  SessionConfig.java  StateObservable.java  SurfaceSizeDefinition.java  UseCaseConfig.java
camerax/src/main/java/androidx/camera/core/internal/: UseCaseEventConfig.java
camerax/src/test/java/androidx/camera/core/: ExampleUnitTest.java
f_uvccamera/: build.gradle
f_uvccamera/src/androidTest/java/com/ifeng/f_uvccamera/: ExampleInstrumentedTest.java
f_uvccamera/src/main/cpp/: CMakeLists.txt
f_uvccamera/src/main/cpp/UVCCamera/: Android.mk  CMakeLists.txt  Parameters.cpp  Parameters.h  UVCButtonCallback.cpp  UVCButtonCallback.h  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  UVCStatusCallback.cpp  UVCStatusCallback.h  _onload.cpp  _onload.h  com_ifeng_f_uvccamera_uvc_UVCCamera.cpp  libUVCCamera.h  objectarray.h  utilbase.cpp
f_uvccamera/src/main/cpp/UVCCamera/pipeline/: AbstractBufferedPipeline.cpp  AbstractBufferedPipeline.h  CallbackPipeline.cpp  CallbackPipeline.h  CaptureBasePipeline.cpp  CaptureBasePipeline.h  ConvertPipeline.cpp  ConvertPipeline.h  DistributePipeline.cpp  DistributePipeline.h  IPipeline.cpp  IPipeline.h  PreviewPipeline.cpp  PreviewPipeline.h  PublisherPipeline.cpp  PublisherPipeline.h  SQLiteBufferedPipeline.cpp  SQLiteBufferedPipeline.h  SimpleBufferedPipeline.cpp  SimpleBufferedPipeline.h  pipeline_helper.cpp  pipeline_helper.h
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/: Android.mk  BUILDING.md  CMakeLists.txt  ChangeLog.md  Makefile.am  Makefile.in  README.ijg  aclocal.m4  coderules.txt  config.h.in  configure  configure.ac  jcmaster.c  jdapimin.c  jdhuff.c  jdsample.c  jpegint.h  rdppm.c  tjbench.c  tjbenchtest.in  tjbenchtest.java.in  tjunittest.c  turbojpeg.c
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/doc/html/: annotated.html  classes.html  functions.html  functions_vars.html  group___turbo_j_p_e_g.html  index.html  modules.html  structtjregion.html  structtjscalingfactor.html  structtjtransform.html
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/include/: jconfig.h  jconfigint.h
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/java/: Makefile.in  TJBench.java  TJUnitTest.java
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/md5/: Makefile.in
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/release/: libjpeg-turbo.nsi.in
f_uvccamera/src/main/cpp/libjpeg-turbo-1.5.0/simd/: Makefile.in  jsimd_arm.c  jsimd_arm64.c  jsimd_arm64_neon.S  jsimd_arm_neon.S  jsimd_mips.c  jsimd_powerpc.c
f_uvccamera/src/main/cpp/libusb/android/jni/: CMakeLists.txt
f_uvccamera/src/main/cpp/libusb/libusb/: io.c  libusb.h  sync.c
f_uvccamera/src/main/cpp/libusb/libusb/os/: android_usbfs.c  linux_usbfs.c
f_uvccamera/src/main/cpp/libusb/msvc/: libusb_dll.dsp  libusb_dll_2005.vcproj  libusb_dll_wince.vcproj  libusb_static_wince.vcproj  listdevs.dsp  listdevs_wince.vcproj  stress_wince.vcproj  xusb.dsp  xusb_wince.vcproj
f_uvccamera/src/main/cpp/libuvc/: CMakeLists.txt  README.md  changelog.txt  doxygen.conf  libuvcConfig.cmake.in  libuvcConfigVersion.cmake.in
f_uvccamera/src/main/cpp/libuvc/android/jni/: Android.mk  CMakeLists.txt
f_uvccamera/src/main/cpp/libuvc/cameras/: isight_imac.txt  isight_macbook.txt  ms_lifecam_show.txt  quickcampro9000.txt  quickcampro9000_builtin_ctrls.txt  quickcampro9000_extra_ctrls.txt
f_uvccamera/src/main/cpp/libuvc/include/libuvc/: libuvc.h  libuvc_config.h  libuvc_config.h.in  libuvc_internal.h  libuvc_internal_original.h  libuvc_original.h
f_uvccamera/src/main/cpp/libuvc/src/: ctrl.c  ctrl_original.c  device.c  device_original.c  diag.c  diag_original.c  example.c  frame-mjpeg.c  frame-mjpeg_original.c  frame.c  frame_original.c  init.c  init_original.c  stream.c  stream_original.c  test.c
f_uvccamera/src/main/cpp/libyuv/: CMakeLists.txt  nativelib.cpp
f_uvccamera/src/main/java/com/ifeng/f_uvccamera/: IUVCCamera.java  UVCCameraProxy.java
f_uvccamera/src/main/java/com/ifeng/f_uvccamera/usb/: IMonitor.java  (+2 more)
f_uvccamera/src/test/java/com/ifeng/f_uvccamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libcamera/: build.gradle
libcamera/src/androidTest/java/com/feng/libcamera/: ExampleInstrumentedTest.kt
libcamera/src/main/: AndroidManifest.xml
libcamera/src/main/cpp/: CMakeLists.txt  camera_engine.cpp  camera_engine.h  camera_image_reader.cpp  camera_image_reader.h  camera_listeners.cpp  camera_listeners.h  libcamera.cpp  native-lib.cpp  native-log.h  ncamera.cpp  ncamera.h
libcamera/src/main/res/raw/: base_fragment_shader.glsl  base_vertex_shader.glsl  vertex_shader.glsl
libcamera/src/test/java/com/feng/libcamera/: ExampleUnitTest.kt
(+56 files in other folders)
